--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 .vs
 *.cache
 Source/obj
-/Assemblies/SmartMedicine.dll
+/Assemblies/*
 /About/About.xml
 *.csproj.user
-/Assemblies/Mining_Priority.dll
