--- a/Source/Mining_Priority.csproj
+++ b/Source/Mining_Priority.csproj
@@ -35,8 +35,7 @@
   <ItemGroup>
     <Reference Include="0Harmony, Version=1.0.9.1, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\ModLib\0Harmony.dll</HintPath>
-      <Private>True</Private>
+      <HintPath>..\ThirdParty\0Harmony.dll</HintPath>
     </Reference>
     <Reference Include="Assembly-CSharp">
       <HintPath>..\..\..\RimWorldWin_Data\Managed\Assembly-CSharp.dll</HintPath>
